Removed empty code block

--- a/jupyter/Results.ipynb
+++ b/jupyter/Results.ipynb
@@ -32,19 +32,11 @@
     "\n",
     "*There's more to learn about URLs, and some things were simplified here, but we don't need more detail for this project. [See Mozilla's documentation for more information.](https://developer.mozilla.org/en-US/docs/Learn/Common_questions/Web_mechanics/What_is_a_URL)*"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7bb3f889-ee75-4754-bf00-d08b238e10b0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
