Completed an incomplete sentence

--- a/jupyter/Results.ipynb
+++ b/jupyter/Results.ipynb
@@ -96,7 +96,7 @@
     "- **INDIV** - Described as, \"Private individual with a physical NYC street address\" on the domain registration form\n",
     "- **ORG** - Described as, \"Corporation or charity with a physical NYC street address\"\n",
     "\n",
-    "This categorization is part of establishing proof of NYC presence by the registrant. I'm not sure how easily or strictly this is enforced, but I assume there are some legal complications \n",
+    "This categorization is part of establishing proof of NYC presence by the registrant. I'm not sure how easily or strictly this is enforced, but the intent is to make sure that people who are registering `.nyc` domains are indeed living or operating within NYC.\n",
     "\n",
     "[More on the `.nyc` Nexus Policy.](https://www.ownit.nyc/policies/nyc-nexus-policy)"
    ]
