Update to retrieve data from hosted Google Sheet instead of local .csv file

--- a/jupyter/Results.ipynb
+++ b/jupyter/Results.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 19,
    "id": "f014dc70",
    "metadata": {},
    "outputs": [
@@ -123,18 +123,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                         url       registration_date nexus_category\n",
-      "0               caffeine.nyc  12/23/2015 05:39:04 PM          INDIV\n",
-      "1                 flirts.nyc  02/18/2024 06:56:50 PM            ORG\n",
-      "2                aclipse.nyc  01/04/2017 06:06:11 AM          INDIV\n",
-      "3           brooklynruns.nyc  04/10/2018 03:46:27 PM            ORG\n",
-      "4             bignycpass.nyc  10/14/2015 11:41:15 AM            ORG\n",
-      "...                      ...                     ...            ...\n",
-      "61230       iamelemental.nyc  10/03/2014 03:40:47 PM          INDIV\n",
-      "61231      michaelsuarez.nyc  05/23/2024 10:01:17 AM          INDIV\n",
-      "61232             lvrusa.nyc  11/04/2014 04:04:48 PM          INDIV\n",
-      "61233           16000psi.nyc  02/02/2023 01:38:06 PM          INDIV\n",
-      "61234  connectingthedots.nyc  03/06/2023 06:47:11 PM          INDIV\n",
+      "                    url       registration_date nexus_category\n",
+      "0               nic.nyc  08/09/2013 10:39:30 PM            ORG\n",
+      "1        applestore.nyc   06/20/2014 3:10:35 PM            ORG\n",
+      "2              yelp.nyc   06/20/2014 3:10:35 PM            ORG\n",
+      "3            iheart.nyc   06/20/2014 3:10:35 PM            ORG\n",
+      "4         priceline.nyc   06/20/2014 3:10:36 PM            ORG\n",
+      "...                 ...                     ...            ...\n",
+      "61230         annex.nyc   11/14/2024 9:12:34 PM            ORG\n",
+      "61231  studiotehran.nyc   11/14/2024 9:40:12 PM          INDIV\n",
+      "61232  citybikeboys.nyc  11/14/2024 10:25:40 PM          INDIV\n",
+      "61233   photobooths.nyc  11/14/2024 10:42:55 PM          INDIV\n",
+      "61234        cypher.nyc  11/14/2024 11:58:58 PM          INDIV\n",
       "\n",
       "[61235 rows x 3 columns]\n"
      ]
@@ -144,7 +144,7 @@
     "import pandas as pd\n",
     "\n",
     "# Read the CSV doc into a DataFrame (two-dimensional data)\n",
-    "initial_df = pd.read_csv('../files/nyc_Domain_Registrations_20241115.csv')\n",
+    "initial_df = pd.read_csv('https://docs.google.com/spreadsheets/d/e/2PACX-1vTmO4zZCoQVROb9q_pRRLZG4voK03u3eIzAcsy69R9Q2bAqejFO41_1SzWSoA1m83p8HiNu3xJyiZ1J/pub?gid=1714697285&single=true&output=csv')\n",
     "\n",
     "print(initial_df)"
    ]
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 20,
    "id": "a54af2c2",
    "metadata": {},
    "outputs": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 21,
    "id": "8b4a5f26",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 22,
    "id": "16a78540",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 23,
    "id": "8ff29d51",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>brooklynplanning.nyc</td>\n",
+       "      <td>gree.nyc</td>\n",
        "      <td>ORG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -370,14 +370,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                         url nexus_category\n",
-       "count                    450            450\n",
-       "unique                   450              2\n",
-       "top     brooklynplanning.nyc            ORG\n",
-       "freq                       1            443"
+       "             url nexus_category\n",
+       "count        450            450\n",
+       "unique       450              2\n",
+       "top     gree.nyc            ORG\n",
+       "freq           1            443"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 24,
    "id": "1978ab54",
    "metadata": {},
    "outputs": [
@@ -410,13 +410,13 @@
      "text": [
       "                                            url nexus_category\n",
       "registration_date                                             \n",
+      "2014-06-20 15:11:23           nyc-limousine.nyc          INDIV\n",
+      "2014-06-20 15:11:38            nyclimousine.nyc          INDIV\n",
+      "2014-06-20 15:13:55                    ldny.nyc          INDIV\n",
       "2014-07-23 19:56:51              unionsqbid.nyc          INDIV\n",
       "2014-07-23 19:56:52      unionsqpartnership.nyc          INDIV\n",
       "2014-07-23 19:56:54          unionsquarebid.nyc          INDIV\n",
-      "2014-07-23 19:56:55  unionsquarepartnership.nyc          INDIV\n",
-      "2014-06-20 15:11:23           nyc-limousine.nyc          INDIV\n",
-      "2014-06-20 15:13:55                    ldny.nyc          INDIV\n",
-      "2014-06-20 15:11:38            nyclimousine.nyc          INDIV\n"
+      "2014-07-23 19:56:55  unionsquarepartnership.nyc          INDIV\n"
      ]
     }
    ],
