Update column names to match google sheet

--- a/jupyter/Results.ipynb
+++ b/jupyter/Results.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "f014dc70",
    "metadata": {},
    "outputs": [
@@ -123,18 +123,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    url       registration_date nexus_category\n",
-      "0               nic.nyc  08/09/2013 10:39:30 PM            ORG\n",
-      "1        applestore.nyc   06/20/2014 3:10:35 PM            ORG\n",
-      "2              yelp.nyc   06/20/2014 3:10:35 PM            ORG\n",
-      "3            iheart.nyc   06/20/2014 3:10:35 PM            ORG\n",
-      "4         priceline.nyc   06/20/2014 3:10:36 PM            ORG\n",
-      "...                 ...                     ...            ...\n",
-      "61230         annex.nyc   11/14/2024 9:12:34 PM            ORG\n",
-      "61231  studiotehran.nyc   11/14/2024 9:40:12 PM          INDIV\n",
-      "61232  citybikeboys.nyc  11/14/2024 10:25:40 PM          INDIV\n",
-      "61233   photobooths.nyc  11/14/2024 10:42:55 PM          INDIV\n",
-      "61234        cypher.nyc  11/14/2024 11:58:58 PM          INDIV\n",
+      "            domain_name domain_registration_date nexus_category\n",
+      "0               nic.nyc   08/09/2013 10:39:30 PM            ORG\n",
+      "1        applestore.nyc    06/20/2014 3:10:35 PM            ORG\n",
+      "2              yelp.nyc    06/20/2014 3:10:35 PM            ORG\n",
+      "3            iheart.nyc    06/20/2014 3:10:35 PM            ORG\n",
+      "4         priceline.nyc    06/20/2014 3:10:36 PM            ORG\n",
+      "...                 ...                      ...            ...\n",
+      "61230         annex.nyc    11/14/2024 9:12:34 PM            ORG\n",
+      "61231  studiotehran.nyc    11/14/2024 9:40:12 PM          INDIV\n",
+      "61232  citybikeboys.nyc   11/14/2024 10:25:40 PM          INDIV\n",
+      "61233   photobooths.nyc   11/14/2024 10:42:55 PM          INDIV\n",
+      "61234        cypher.nyc   11/14/2024 11:58:58 PM          INDIV\n",
       "\n",
       "[61235 rows x 3 columns]\n"
      ]
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "a54af2c2",
    "metadata": {},
    "outputs": [
@@ -185,10 +185,10 @@
     "df_by_date = copy.deepcopy(initial_df)\n",
     "\n",
     "# Ensure the registration_date column is datetimes\n",
-    "df_by_date['registration_date'] = pd.to_datetime(df_by_date['registration_date'], format=\"%m/%d/%Y %I:%M:%S %p\")\n",
+    "df_by_date['domain_registration_date'] = pd.to_datetime(df_by_date['domain_registration_date'], format=\"%m/%d/%Y %I:%M:%S %p\")\n",
     "\n",
     "# Set the index column of the DataFrame to the registration_date values\n",
-    "df_by_date.set_index('registration_date', inplace=True)\n",
+    "df_by_date.set_index('domain_registration_date', inplace=True)\n",
     "\n",
     "# Get count of registrations per month ('ME')\n",
     "counts = df_by_date.resample('ME').size()\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "8b4a5f26",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "16a78540",
    "metadata": {},
    "outputs": [
@@ -284,13 +284,13 @@
     "first_year = copy.deepcopy(initial_df)\n",
     "\n",
     "# Ensure the registration_date column is datetimes\n",
-    "first_year['registration_date'] = pd.to_datetime(first_year['registration_date'], format=\"%m/%d/%Y %I:%M:%S %p\")\n",
+    "first_year['domain_registration_date'] = pd.to_datetime(first_year['domain_registration_date'], format=\"%m/%d/%Y %I:%M:%S %p\")\n",
     "\n",
     "# Filter to registrations before 2014-10-01\n",
-    "first_year = first_year[first_year['registration_date'] < '2014-10-01']\n",
+    "first_year = first_year[first_year['domain_registration_date'] < '2014-10-01']\n",
     "\n",
     "# Set the index column of the DataFrame to the registration_date values\n",
-    "first_year.set_index('registration_date', inplace=True)\n",
+    "first_year.set_index('domain_registration_date', inplace=True)\n",
     "\n",
     "# Get count of registrations per day ('D')\n",
     "counts = first_year.resample('D').size()\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "8ff29d51",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>url</th>\n",
+       "      <th>domain_name</th>\n",
        "      <th>nexus_category</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -370,14 +370,14 @@
        "</div>"
       ],
       "text/plain": [
-       "             url nexus_category\n",
-       "count        450            450\n",
-       "unique       450              2\n",
-       "top     gree.nyc            ORG\n",
-       "freq           1            443"
+       "       domain_name nexus_category\n",
+       "count          450            450\n",
+       "unique         450              2\n",
+       "top       gree.nyc            ORG\n",
+       "freq             1            443"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "1978ab54",
    "metadata": {},
    "outputs": [
@@ -408,15 +408,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                            url nexus_category\n",
-      "registration_date                                             \n",
-      "2014-06-20 15:11:23           nyc-limousine.nyc          INDIV\n",
-      "2014-06-20 15:11:38            nyclimousine.nyc          INDIV\n",
-      "2014-06-20 15:13:55                    ldny.nyc          INDIV\n",
-      "2014-07-23 19:56:51              unionsqbid.nyc          INDIV\n",
-      "2014-07-23 19:56:52      unionsqpartnership.nyc          INDIV\n",
-      "2014-07-23 19:56:54          unionsquarebid.nyc          INDIV\n",
-      "2014-07-23 19:56:55  unionsquarepartnership.nyc          INDIV\n"
+      "                                         domain_name nexus_category\n",
+      "domain_registration_date                                           \n",
+      "2014-06-20 15:11:23                nyc-limousine.nyc          INDIV\n",
+      "2014-06-20 15:11:38                 nyclimousine.nyc          INDIV\n",
+      "2014-06-20 15:13:55                         ldny.nyc          INDIV\n",
+      "2014-07-23 19:56:51                   unionsqbid.nyc          INDIV\n",
+      "2014-07-23 19:56:52           unionsqpartnership.nyc          INDIV\n",
+      "2014-07-23 19:56:54               unionsquarebid.nyc          INDIV\n",
+      "2014-07-23 19:56:55       unionsquarepartnership.nyc          INDIV\n"
      ]
     }
    ],
